[package]
name = "rustyboi"
version = "0.1.0"
authors = ["Hirtol <gameboy@hirtol.top>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
anyhow = "1.0.32"
simplelog = "0.8.0"
clap = "2.33.2"
rustyboi-core = {path = "core" }
imgui = "0.4.0"

[dependencies.sdl2]
version = "0.34.3"
features = ["unsafe_textures"]




#[profile.release]
#lto = "fat"
#codegen-units = 1

[workspace]
members = ["core"]
