[package]
name = "rustyboi"
version = "0.1.0"
authors = ["Hirtol <gameboy@hirtol.top>"]
edition = "2018"
default-run = "rustyboi_sdl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rustyboi_sdl"
path = "src/sdl_frontend/main.rs"

[[bin]]
name = "rustyboi_testing"
path = "src/testing_frontend/main.rs"

[dependencies]
log = "0.4.11"
anyhow = "1.0.32"
simplelog = "0.8.0"
rustyboi-core = {path = "core"}
image = "0.23.8"
blake2 = "0.9.0"
gumdrop = "0.8.0"
directories = "3.0.1"
memmap2 = "0.1.0"
crossbeam = "0.8.0"
gl = "0.10.0"
imgui = "0.5.0"
imgui-opengl-renderer = "0.9.0"
imgui-sdl2 = "0.12.0"

[dependencies.sdl2]
version = "0.34.3"
features = ["unsafe_textures", "bundled", "static-link"]


#[profile.release]
#debug = true
#[profile.release]
#lto = 'fat'
#panic = 'abort'
#codegen-units = 1

[workspace]
members = ["core"]
