[package]
name = "rustyboi-core"
version = "0.1.0"
authors = ["Hirtol <gameboy@hirtol.top>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
anyhow = "1.0.32"
bitflags = "1.2.1"
image = "0.23.8"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
num-integer = "0.1.43"
rayon = "1.4.0"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "test_benchmark"
harness = false